--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ python:
   - "2.7"
   - "3.4"
 install: "pip install -r requirements.txt"
-script: python tamales_tests.py
+script: python src/tamales_tests.py
 services:
   - redis-server
