--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.7"
   - "3.4"
-install: "pip install -r requirements.txt"
+install: "python setup.py install"
 script: python src/tamales_tests.py
 services:
   - redis-server
