--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ python:
   - "2.7"
   - "3.4"
 install: "python setup.py install"
-script: python src/tamales_tests.py
+script: python -m unittest discover -s tests
 services:
   - redis-server
