--- a/deploy/roles/tamales/tasks/webserver.yml
+++ b/deploy/roles/tamales/tasks/webserver.yml
@@ -4,10 +4,13 @@
 - name: install nginx server
   apt: name=nginx-full state=present
 
+- name: create server root directory
+  file: path={{ tamales_server_root_dir }} state=directory mode=0755
+
 - name: create configuration file for tamales site
-  template: src=nginx-tamales.site.j2 dest=/etc/nginx/sites-available/tamales.site
+  template: src=nginx-tamales.site.j2 dest=/etc/nginx/sites-available/{{ tamales_server_name }}
   notify: reload nginx
 
 - name: enable tamales site
-  file: src=/etc/nginx/sites-available/tamales.site dest=/etc/nginx/sites-enabled/tamales state=link
+  file: src=/etc/nginx/sites-available/{{ tamales_server_name }} dest=/etc/nginx/sites-enabled/{{ tamales_server_name }} state=link
   notify: reload nginx
